--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,3 +18,18 @@ services:
       - 8080:8080
     depends_on:
       - postgres
+    environment:
+      - DB_HOST=postgres
+      - DB_USER=root
+      - DB_PASSWORD=root
+      - DB_NAME=root
+      - DB_PORT=5432
+      
+  test:
+    build:
+      context: .
+      target: build
+    volumes:
+      - .:/app
+    working_dir: /app
+    entrypoint: ["go", "test", "./..."]
